--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strongly Typed by HTML5 UP</title>
+		<title>Simon Lee</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -27,7 +27,7 @@
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>Papers</span></a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
 											<li><a href="#">Magna phasellus</a></li>
@@ -43,9 +43,9 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Machine Learning</span></a></li>
+									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>AB Test</span></a></li>
+									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Python</span></a></li>
 								</ul>
 							</nav>
 
