--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
+							<h1 id="logo"><a href="index.html">Simon Lee BNU</a></h1>
+							<p>我是一只快乐的小码农，小小数据科学，伴我快乐成长.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
