--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 						<!-- Logo -->
 							<h1 id="logo"><a href="index.html">Simon Lee BNU</a></h1>
-							<p>我是一只快乐的小码农，小小数据科学，伴我快乐成长.</p>
+							<p>I love Python.</p>
 
 						<!-- Nav -->
 							<nav id="nav">
