--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				<section id="features">
 					<div class="container">
 						<header>
-							<h2>Gentlemen, behold! This is <strong>Strongly Typed</strong>!</h2>
+							<h2>Gentlemen, come on! This is <strong>DATA SCIENCE</strong>!</h2>
 						</header>
 						<div class="row aln-center">
 							<div class="col-4 col-6-medium col-12-small">
@@ -65,11 +65,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>Okay, so what is this?</h3>
+											<h3>什么是机器学习?</h3>
 										</header>
-										<p>This is <strong>Strongly Typed</strong>, a free, fully responsive site template
-										by <a href="http://html5up.net">HTML5 UP</a>. Free for personal and commercial use under the
-										<a href="http://html5up.net/license">CCA 3.0 license</a>.</p>
+										<p>机器学习是一门人工智能的科学，该领域的主要研究对象是人工智能，特别是如何在经验学习中改善具体算法的性能。机器学习是对能通过经验自动改进的计算机算法的研究。机器学习是用数据或以往的经验，以此优化计算机程序的性能标准。</p>
 									</section>
 
 							</div>
@@ -79,11 +77,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>Nice! What is HTML5 UP?</h3>
+											<h3>什么是AB测试？</h3>
 										</header>
-										<p><a href="http://html5up.net">HTML5 UP</a> is a side project of <a href="http://twitter.com/ajlkn">AJ’s</a> (= me).
-										I started it as a way to both test my responsive tools and sharpen up my coding
-										and design skills a bit.</p>
+										<p>AB测试是为Web或App界面或流程制作两个（A/B）或多个（A/B/n）版本，在同一时间维度，分别让组成成分相同（相似）的访客群组随机的访问这些版本，收集各群组的用户体验数据和业务数据，最后分析评估出最好版本正式采用。</p>
 									</section>
 
 							</div>
@@ -93,10 +89,9 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>What's this built with?</h3>
+											<h3>关于Python & R</h3>
 										</header>
-										<p><strong>Responsive Tools</strong> is a simple set of tools for building responsive
-										sites and apps. All of my templates at <a href="http://html5up.net">HTML5 UP</a> are built using these tools.</p>
+										<p><strong>Python & R</strong> 是我们所要进行统计分析和和机器学习的工具，能够通过调取库、包等内容进行充分地数据分析和科学计算！人生苦短，我选Python</p>
 									</section>
 
 							</div>
@@ -306,38 +301,36 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>欢迎联系我，共同进步！</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													No. 19, XinJieKouWai St.<br />
+													Beijing Normal University<br />
+													Beijing 100875, P. R. China
 												</li>
 												<li class="icon fa-phone">
 													18510344228
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">449409824@qq.com</a>
 												</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
+													<a href="#">@Bear小卯卯</a>
 												</li>
 												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 											</ul>
 										</div>
