--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Simon Lee BNU</a></h1>
+							<h1 id="logo"><a href="index.html">Simon Lee，Pick me UP !!!</a></h1>
 							<p>I love Python，小小数据科学，伴我快乐成长.</p>
-
+							<p>我叫李琛，北京师范大学萌新码农一只！老司机请带我上车!</p>
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
@@ -107,8 +107,8 @@
 			<!-- Banner -->
 				<section id="banner">
 					<div class="container">
-						<p>Use this space for <strong>profound thoughts</strong>.<br />
-						Or an enormous ad. Whatever.</p>
+						<p><strong>A.I.  3.0 have already arrived！</strong><strong>Data Science 3.0！</strong>.<br />
+						Now，请开始你的表演！</p>
 					</div>
 				</section>
 
@@ -123,20 +123,12 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">I don’t want to say <strong>it’s the aliens</strong> ...<br />
-												but it’s the aliens.</a></h2>
+												<h2><a href="#">Machine Learning <strong>笔记总结</strong> <br />
+												Data science Tips</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>I mean isn't it possible?</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique.</p>
+											<h3>常见的十大机器学习算法？</h3>
+											<p>我们通常在利用机器学习算法对数据进行处理时，常常用到以下十种机器学习算法，针对这10种算法，又出现了每一种算法更深层次的优化和迭代。这10种算法分别是：决策树算法DT、聚类算法Kmeans、支持向量机算法SVM、关联算法Apriori、最大期望算法EM、排序算法Rank、集成算法Adaboost、K近邻算法KNN、贝叶斯算法Bayes、人工神经网络BP等等。此外，Bagging随机森林RF、GBDT、Xgboost、LightGBM、深度学习等等框架也非常流行。推荐大家学习李航老师的《统计学习方法》、周志华老师的《机器学习西瓜书》，这些方法在博客中或多或少地会为大家介绍！</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
 											</ul>
@@ -145,30 +137,16 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2><a href="#">By the way, many thanks to <strong>regularjane</strong>
-												for these awesome demo photos</a></h2>
+												<h2><a href="#">A/B Testing <strong>业务分析，项目实战</strong>
+												</a></h2>
 											</header>
 											<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-											<h3>You should probably check out her work</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum malesuada.</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus.</p>
+											<h3>常见的数据分析框架、运营分析方法论</h3>
+											<p>在进行数据分析的时候，常常会用到AB测试对数据进行分析，这里我们以游戏数据为例，对相关的指标从不同的维度提出一个分析框架 ：</p>
+											<p>用户——用户分析的维度：用户的统计、平台、时间、渠道；新增用户：游戏硬技术、新增用户的分析。活跃用户 ：AARRR模型、新老用户和留存、活跃用户数量分析、游戏时长分析、用户流失；生命周期分析：用户生命周期价值：LTV计算、LTV分析；用户购买关联分析。</p><p>留存——定义和计算；留存分析：用户、产品和运营；留存率优化；流失分析。</p>
+											<p>渠道——渠道追踪；渠道数据分析框架总结 ：渠道特点分析、产品、目标人群的渠道匹配、渠道评价体系、渠道的优化。</p>
+											<p>收入——总体分析；付费转化率分析：定义转化率、付费玩家，APA、付费转化率的影响因素、付费转化率深度分析；ARPU；ARPPU；RFM模型：付费时间间隔(Recency, R)、付费总次数(Frequency, F)、付费总金额(Monetary, M)、付费客户分层。</p>
+											<p>产品——游戏优化、运营活动。</p>
 											<ul class="actions">
 												<li><a href="#" class="button icon fa-file">Continue Reading</a></li>
 											</ul>
@@ -187,11 +165,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">数据可视化</span>
+																<h3><a href="#">全面自动化BI系统</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Python可视化Dashboard是基于斯坦福大学突破性技术的软件应用程序。它帮助您生动地分析实际存在的任何结构化数据，以在几分钟内生成美观的图表、坐标图、仪表盘与报告。利用简便的拖放式界面，您可以自定义视图、布局、形状、颜色等等，帮助您展现自己的数据视角。</p>
 														</article>
 
 												</li>
@@ -200,24 +177,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<span class="date">社会学、心理学量化研究</span>
+																<h3><a href="#">结构方程、多层线性、计量经济模型</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>面对大数据时代的到来，社科类的一些学科同样需要进行数据分析，其中除ML之外最常见的社科六大神器：结构方程SEM、多层线性HLM、断点RD、工具变量IV、倾向值匹配PSM、双重差分DID。这六大神器全部在R语言中已经封装好，可以直接调用哦！🤣🤣🤣🤣🤣🤣</p>
 														</article>
 
 												</li>
@@ -232,13 +195,10 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of note</a></h3>
+																<h3><a href="#">数据收集——利用Python进行网络爬虫</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>网络爬虫按照系统结构和实现技术，大致可以分为以下几种类型：通用网络爬虫（General Purpose Web Crawler）、聚焦网络爬虫（Focused Web Crawler）、增量式网络爬虫（Incremental Web Crawler）、深层网络爬虫（Deep Web Crawler）。 实际的网络爬虫系统通常是几种爬虫技术相结合实现的。如何实现这几种爬虫的方式呢？当然是我们的神器——Python！</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon fa-file">Learn More</a></li>
 															</ul>
@@ -250,13 +210,10 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of less note</a></h3>
+																<h3><a href="#">Hadoop生态系统圈</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p> Hadoop实现了一个分布式文件系统（Hadoop Distributed File System），简称HDFS。HDFS有高容错性的特点，并且设计用来部署在低廉的（low-cost）硬件上；而且它提供高吞吐量（high throughput）来访问应用程序的数据，适合那些有着超大数据集（large data set）的应用程序。HDFS放宽了（relax）POSIX的要求，可以以流的形式访问（streaming access）文件系统中的数据。Hadoop的框架最核心的设计就是：HDFS和MapReduce。HDFS为海量的数据提供了存储，则MapReduce为海量的数据提供了计算。</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon fa-file">Learn More</a></li>
 															</ul>
@@ -324,7 +281,7 @@
 													<a href="#">@Bear小卯卯</a>
 												</li>
 												<li class="icon fa-instagram">
-													<a href="#">holding......</a>
+													<a href="#">Wechat：BB19921111</a>
 												</li>
 												<li class="icon fa-dribbble">
 													<a href="#">holding......</a>
