--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -19,9 +19,9 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
-
+							<h1 id="logo"><a href="index.html">Simon Lee，Pick me UP !!!</a></h1>
+							<p>I love Python，小小数据科学，伴我快乐成长.</p>
+							<p>我叫李琛，北京师范大学萌新码农一只！老司机请带我上车!</p>
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
