--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -27,7 +27,7 @@
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>papers</span></a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
 											<li><a href="#">Magna phasellus</a></li>
@@ -43,9 +43,9 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Machine Learning</span></a></li>
+									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>AB Test</span></a></li>
+									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Python</span></a></li>
 								</ul>
 							</nav>
 
@@ -63,8 +63,8 @@
 									<!-- Post -->
 										<article class="box post">
 											<header>
-												<h2>Behold! This is the <strong>right sidebar</strong> layout<br />
-												with a sidebar on the right!</h2>
+												<h2>数据驱动的基石<strong>        AB Testing</strong> <br />
+												利用R和Python进行数据分析</h2>
 											</header>
 											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 											<h3>Right is also not left</h3>
@@ -144,11 +144,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 30</span>
-																<h3><a href="#">Just another post</a></h3>
+																<span class="date">数据可视化</span>
+																<h3><a href="#">全面自动化BI系统</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>Python可视化Dashboard是基于斯坦福大学突破性技术的软件应用程序。它帮助您生动地分析实际存在的任何结构化数据，以在几分钟内生成美观的图表、坐标图、仪表盘与报告。利用简便的拖放式界面，您可以自定义视图、布局、形状、颜色等等，帮助您展现自己的数据视角。</p>
 														</article>
 
 												</li>
@@ -157,24 +156,10 @@
 													<!-- Excerpt -->
 														<article class="box excerpt">
 															<header>
-																<span class="date">July 28</span>
-																<h3><a href="#">And another post</a></h3>
+																<span class="date">社会学、心理学量化研究</span>
+																<h3><a href="#">结构方程、多层线性、计量经济模型</a></h3>
 															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
-														</article>
-
-												</li>
-												<li>
-
-													<!-- Excerpt -->
-														<article class="box excerpt">
-															<header>
-																<span class="date">July 24</span>
-																<h3><a href="#">One more post</a></h3>
-															</header>
-															<p>Lorem ipsum dolor odio facilisis convallis. Etiam non nunc vel est
-															suscipit convallis non id orci lorem ipsum sed magna consequat feugiat lorem dolore.</p>
+															<p>面对大数据时代的到来，社科类的一些学科同样需要进行数据分析，其中除ML之外最常见的社科六大神器：结构方程SEM、多层线性HLM、断点RD、工具变量IV、倾向值匹配PSM、双重差分DID。这六大神器全部在R语言中已经封装好，可以直接调用哦！🤣🤣🤣🤣🤣🤣</p>
 														</article>
 
 												</li>
@@ -189,13 +174,10 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of note</a></h3>
+																<h3><a href="#">数据收集——利用Python进行网络爬虫</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic06.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>网络爬虫按照系统结构和实现技术，大致可以分为以下几种类型：通用网络爬虫（General Purpose Web Crawler）、聚焦网络爬虫（Focused Web Crawler）、增量式网络爬虫（Incremental Web Crawler）、深层网络爬虫（Deep Web Crawler）。 实际的网络爬虫系统通常是几种爬虫技术相结合实现的。如何实现这几种爬虫的方式呢？当然是我们的神器——Python！</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon fa-file">Learn More</a></li>
 															</ul>
@@ -207,13 +189,10 @@
 													<!-- Highlight -->
 														<article class="box highlight">
 															<header>
-																<h3><a href="#">Something of less note</a></h3>
+																<h3><a href="#">Hadoop生态系统圈</a></h3>
 															</header>
 															<a href="#" class="image left"><img src="images/pic07.jpg" alt="" /></a>
-															<p>Phasellus  sed laoreet massa id justo mattis pharetra. Fusce suscipit ligula vel quam
-															viverra sit amet mollis tortor congue magna lorem ipsum dolor et quisque ut odio facilisis
-															convallis. Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus
-															facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.</p>
+															<p>Hadoop实现了一个分布式文件系统（Hadoop Distributed File System），简称HDFS。HDFS有高容错性的特点，并且设计用来部署在低廉的（low-cost）硬件上；而且它提供高吞吐量（high throughput）来访问应用程序的数据，适合那些有着超大数据集（large data set）的应用程序。HDFS放宽了（relax）POSIX的要求，可以以流的形式访问（streaming access）文件系统中的数据。Hadoop的框架最核心的设计就是：HDFS和MapReduce。HDFS为海量的数据提供了存储，则MapReduce为海量的数据提供了计算。</p>
 															<ul class="actions">
 																<li><a href="#" class="button icon fa-file">Learn More</a></li>
 															</ul>
@@ -258,38 +237,36 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>欢迎联系我，共同进步！</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													No. 19, XinJieKouWai St.<br />
+													Beijing Normal University<br />
+													Beijing 100875, P. R. China
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													18510344228
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">449409824@qq.com</a>
 												</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
+													<a href="#">@Bear小卯卯</a>
 												</li>
 												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
+													<a href="#">Wechat：BB19921111</a>
 												</li>
 												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 											</ul>
 										</div>
