--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -19,15 +19,15 @@
 					<div class="container">
 
 						<!-- Logo -->
-							<h1 id="logo"><a href="index.html">Strongly Typed</a></h1>
-							<p>A responsive HTML5 site template. Manufactured by HTML5 UP.</p>
-
+							<h1 id="logo"><a href="index.html">Simon Lee，Pick me UP !!!</a></h1>
+							<p>I love Python，小小数据科学，伴我快乐成长.</p>
+							<p>我叫李琛，北京师范大学萌新码农一只！老司机请带我上车!</p>
 						<!-- Nav -->
 							<nav id="nav">
 								<ul>
 									<li><a class="icon fa-home" href="index.html"><span>Introduction</span></a></li>
 									<li>
-										<a href="#" class="icon fa-bar-chart-o"><span>Dropdown</span></a>
+										<a href="#" class="icon fa-bar-chart-o"><span>Papers</span></a>
 										<ul>
 											<li><a href="#">Lorem ipsum dolor</a></li>
 											<li><a href="#">Magna phasellus</a></li>
@@ -43,9 +43,9 @@
 											<li><a href="#">Veroeros feugiat</a></li>
 										</ul>
 									</li>
-									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Left Sidebar</span></a></li>
-									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>Right Sidebar</span></a></li>
-									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>No Sidebar</span></a></li>
+									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Machine Learning</span></a></li>
+									<li><a class="icon fa-retweet" href="right-sidebar.html"><span>AB Test</span></a></li>
+									<li><a class="icon fa-sitemap" href="no-sidebar.html"><span>Python</span></a></li>
 								</ul>
 							</nav>
 
@@ -60,8 +60,8 @@
 							<!-- Post -->
 								<article class="box post">
 									<header>
-										<h2>Behold! This is the <strong>no sidebar</strong> layout<br />
-										with no sidebar at all!</h2>
+										<h2> <strong>左手 Python & 右手R</strong> <br />
+										</h2>
 									</header>
 									<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
 									<h3>And yeah, that's basically it</h3>
@@ -161,38 +161,36 @@
 							</div>
 							<div class="col-6 col-12-medium">
 								<section>
-									<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet
-									mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur
-									leo nibh, rutrum eu malesuada.</p>
+									<p>欢迎联系我，共同进步！</p>
 									<div class="row">
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-home">
-													1234 Somewhere Road<br />
-													Nashville, TN 00000<br />
-													USA
+													No. 19, XinJieKouWai St.<br />
+													Beijing Normal University<br />
+													Beijing 100875, P. R. China
 												</li>
 												<li class="icon fa-phone">
-													(000) 000-0000
+													18510344228
 												</li>
 												<li class="icon fa-envelope">
-													<a href="#">info@untitled.tld</a>
+													<a href="#">449409824@qq.com</a>
 												</li>
 											</ul>
 										</div>
 										<div class="col-6 col-12-small">
 											<ul class="icons">
 												<li class="icon fa-twitter">
-													<a href="#">@untitled</a>
+													<a href="#">@Bear小卯卯</a>
 												</li>
 												<li class="icon fa-instagram">
-													<a href="#">instagram.com/untitled</a>
+													<a href="#">Wechat：BB19921111</a>
 												</li>
 												<li class="icon fa-dribbble">
-													<a href="#">dribbble.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 												<li class="icon fa-facebook">
-													<a href="#">facebook.com/untitled</a>
+													<a href="#">holding......</a>
 												</li>
 											</ul>
 										</div>
