--- a/index.html
+++ b/index.html
@@ -29,18 +29,18 @@
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>Papers</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">待完善，等我一下哦！</a>
 												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
 										</ul>
 									</li>
 									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Machine Learning</span></a></li>
