--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -29,18 +29,18 @@
 									<li>
 										<a href="#" class="icon fa-bar-chart-o"><span>papers</span></a>
 										<ul>
-											<li><a href="#">Lorem ipsum dolor</a></li>
-											<li><a href="#">Magna phasellus</a></li>
-											<li><a href="#">Etiam dolore nisl</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
 											<li>
-												<a href="#">Phasellus consequat</a>
+												<a href="#">待完善，等我一下哦！</a>
 												<ul>
-													<li><a href="#">Magna phasellus</a></li>
-													<li><a href="#">Etiam dolore nisl</a></li>
-													<li><a href="#">Phasellus consequat</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
+													<li><a href="#">待完善，等我一下哦！</a></li>
 												</ul>
 											</li>
-											<li><a href="#">Veroeros feugiat</a></li>
+											<li><a href="#">待完善，等我一下哦！</a></li>
 										</ul>
 									</li>
 									<li><a class="icon fa-cog" href="left-sidebar.html"><span>Machine Learning</span></a></li>
@@ -67,68 +67,19 @@
 												利用R和Python进行数据分析</h2>
 											</header>
 											<span class="image featured"><img src="images/pic09.jpg" alt="" /></span>
-											<h3>Right is also not left</h3>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-											<p>Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat
-											Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit ligula
-											vel quam viverra sit amet mollis tortor congue. Sed quis mauris sit amet
-											magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada in,
-											tristique at erat. Curabitur leo nibh, rutrum eu malesuada  in, tristique
-											at erat lorem ipsum dolor sit amet lorem ipsum sed consequat magna
-											tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros consequat
-											magna tempus</p>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-											<h3>Accumsan lorem ipsum veroeros</h3>
-											<p>Consequat Phasellus laoreet massa id in, tristique at erat lorem
-											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna.</p>
-											<p>Phasellus laoreet massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique.
-											Curabitur leo nibh, rutrum eu malesuada in tristique</p>
-											<h3>Ligula suspcipit fusce veroeros</h3>
-											<p>Nullam dolore etiam sed massa id in, tristique at erat lorem
-											ipsum dolor sit amet lorem ipsum sed consequat magna tempus veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna.</p>
-											<p>Sed massa id justo mattis pharetra. Fusce suscipit
-											ligula vel quam viverra sit amet mollis tortor congue. Sed quis mauris
-											sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											in, tristique at erat lorem ipsum dolor sit amet lorem ipsum sed consequat
-											magna tempus veroeros lorem sed tempus aliquam lorem ipsum veroeros
-											consequat magna tempus lorem ipsum consequat Phasellus laoreet massa id
-											justo mattis pharetra. Fusce suscipit ligula vel quam viverra sit amet
-											mollis tortor congue. Sed quis mauris sit amet magna accumsan.</p>
+											<h3>A/B testing </h3>
+											<p>A/B testing (also known as split testing) allows you to compare two variations of a design element on a website, with the purpose of identifying which element is most effective at accomplishing a specific objective.</p>
+											<p>In an A/B test, visitors are randomly divided into two segments as they enter a site: half are placed in “segment A”, while the other half go into “segment B”. Each segment is then shown a variation of a specific design element of your choice — for example, a landing page, store theme, call-to-action button, or checkout flow.</p>
+											<p>By testing two variations against each other in real-time with real users, you are able to collect meaningful data to determine how each version of an element influences the behaviour of your visitors. In turn, this gives you the insight to create a design that will yield the best results for your client’s online business. </p>
+											<h3>Why web designers should A/B test</h3>
+											<p>Creating the best website possible should be reason enough for you to start offering A/B testing as a standard service in your design projects. But if you still aren’t convinced, here are a few other benefits you can expect to see</p>
+											<p>1. Increased revenue — By including A/B testing as a service you offer as a freelancer, you will be able to bring in more revenue on projects. You can either include it as a standardized service within your web design packages, or you can leverage the benefit of website optimization as an upsell feature. Your clients are spending a decent sum to have their site built professionally — use A/B testing as a post-launch service to make smart design changes that will help them get the best bang for their buck (and earn a few more yourself too).</p>
+											<p>2. Reduced client disputes — When it comes to making decisions about the design of a website, everyone in the room seems to have an opinion on what the site should look like — especially the client who’s paying for it. Luckily, A/B testing gives you concrete data to guide decision-making and resolve unnecessary debates without offending the client.</p>
+											<p>3. Satisfied clients — It’s easy to focus all our energy into the visual design of a website and overlook its functional purpose. While most clients do want a beautiful looking final product, every client is more concerned with having a site that converts. Running A/B tests shows your client that you genuinely care about their business’s online goals and are willing to do whatever it takes to make sure they’re accomplished.</p>
+											<h3>How to design a simple A/B test</h3>
+											<p>If you’ve never run a web optimization experiment before, A/B testing can appear pretty daunting at first. But don’t worry, creating a simple A/B test is, well, pretty simple. Below I’ll outline a strategic method you can start using to run your first A/B tests.</p>
+											<p>Before you start testing anything, you need to understand the purpose of your website. Understanding the purpose of a website allows you to identify what success means for your client in terms of quantifiable metrics. These metrics, known as conversions, represent the desired action you want a visitor to take on your site. By defining your objective and success metrics early on, you are setting up the framework for which your A/B testing will operate within.</p>
+											<p>Your conversion metric will vary based on the type of website you are designing. Here’s a table that outlines some common conversion metrics for various websites types:</p>
 										</article>
 
 								</div>
