--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -138,16 +138,14 @@
 												Machine Learning Knowledge Graph</h2>
 											</header>
 											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
-											<h3>待完善，等我一下哦！</h3>
-											<p>待完善，等我一下哦！</p>
-											<p>待完善，等我一下哦！</p>
-											<p>待完善，等我一下哦！</p>
-											<h3>待完善，等我一下哦！</h3>
-											<p>待完善，等我一下哦！</p>
-											<p>待完善，等我一下哦！</p>
-											<h3>待完善，等我一下哦！</h3>
-											<p>待完善，等我一下哦！</p>
-											<p>待完善，等我一下哦！</p>
+											<h3>第一章</h3>
+											<p><span class="image featured"><img src="images/chapter1.jpg" alt="" /></span></p>
+											<h3>第二章</h3>
+											<p>待续</p>
+											<h3>第三章</h3>
+											<p>待续</p>
+											<h3>第四章</h3>
+											<p>待续</p>
 										</article>
 
 								</div>
