--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -138,10 +138,41 @@
 												Machine Learning Knowledge Graph</h2>
 											</header>
 											<span class="image featured"><img src="images/pic04.jpg" alt="" /></span>
-											<h3>第一章</h3>
+											<h3>Lectrue1 basic</h3>
 											<p><span class="image featured"><img src="images/chapter1.jpg" alt="" /></span></p>
-											<h3>第二章</h3>
-											<p>待续</p>
+											<h3>Lectrue2 tree</h3>
+											<p>
+											<span class="image featured"><img src="images/2.png" alt="" /></span>
+											<span class="image featured"><img src="images/3.png" alt="" /></span>
+											<span class="image featured"><img src="images/4.png" alt="" /></span>
+											<span class="image featured"><img src="images/5.png" alt="" /></span>
+											<span class="image featured"><img src="images/6.png" alt="" /></span>
+											<span class="image featured"><img src="images/7.png" alt="" /></span>
+											<span class="image featured"><img src="images/8.png" alt="" /></span>
+											<span class="image featured"><img src="images/9.png" alt="" /></span>
+											<span class="image featured"><img src="images/10.png" alt="" /></span>
+											<span class="image featured"><img src="images/11.png" alt="" /></span>
+											<span class="image featured"><img src="images/12.png" alt="" /></span>
+											<span class="image featured"><img src="images/13.png" alt="" /></span>
+											<span class="image featured"><img src="images/14.png" alt="" /></span>
+											<span class="image featured"><img src="images/15.png" alt="" /></span>
+											<span class="image featured"><img src="images/16.png" alt="" /></span>
+											<span class="image featured"><img src="images/18.png" alt="" /></span>
+											<span class="image featured"><img src="images/19.png" alt="" /></span>
+											<span class="image featured"><img src="images/20.png" alt="" /></span>
+											<span class="image featured"><img src="images/21.png" alt="" /></span>
+											<span class="image featured"><img src="images/22.png" alt="" /></span>
+											<span class="image featured"><img src="images/23.png" alt="" /></span>
+											<span class="image featured"><img src="images/24.png" alt="" /></span>
+											<span class="image featured"><img src="images/25.png" alt="" /></span>
+											<span class="image featured"><img src="images/26.png" alt="" /></span>
+											<span class="image featured"><img src="images/27.png" alt="" /></span>
+											<span class="image featured"><img src="images/28.png" alt="" /></span>
+											<span class="image featured"><img src="images/29.png" alt="" /></span>
+											<span class="image featured"><img src="images/30.png" alt="" /></span>
+											<span class="image featured"><img src="images/31.png" alt="" /></span>
+											<span class="image featured"><img src="images/32.png" alt="" /></span>
+											</p>
 											<h3>第三章</h3>
 											<p>待续</p>
 											<h3>第四章</h3>
